--- a/roles/ansible-rbenv-role/templates/rbenv_user.sh.j2
+++ b/roles/ansible-rbenv-role/templates/rbenv_user.sh.j2
@@ -1,4 +1,5 @@
-export PATH=$HOME/.rbenv/bin:$PATH;
-export RBENV_ROOT=$HOME/.rbenv;
-eval "$(rbenv init -)";
-
+if [ -d "$HOME/.rbenv" ]; then
+  export PATH=$HOME/.rbenv/bin:$PATH;
+  export RBENV_ROOT=$HOME/.rbenv;
+  eval "$(rbenv init -)";
+fi
